--- a/index.html
+++ b/index.html
@@ -5,30 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
     </head>
     <body>
-        <div class="list">
-            <!-- <div class="lvl1">
-                    <div class="content">
-                        <p>Какой-то текст</p>
-                        <div class="controls">
-                            <p class="plus">+</p>
-                            <p class="del">&times;</p>
-                        </div>
-                    </div>
-                    <div class="lvl2">
-                        <div class="content">
-                            <p>Какой-то текст</p>
-                            <div class="controls">
-                                <p class="plus">+</p>
-                                <p class="del">&times;</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-        </div>
+        <div class="list"></div>
     </body>
 </html>
